--- a/Blog/templates/create_post.html
+++ b/Blog/templates/create_post.html
@@ -11,6 +11,7 @@ CREATE POST 🔥
     <h5 class="text-center">C R E A T E - P O S T 🔥</h5>
     <hr>
     <form action="" method="POST">
+        {% csrf_token %}
         <div class="form-group mt-3">
             <label for="#">Post title</label>
             <input type="text" class="form-control " name="post_Title" id="post_Title">
